--- a/Betting-Coverage.ipynb
+++ b/Betting-Coverage.ipynb
@@ -7,36 +7,24 @@
    "outputs": [],
    "source": [
     "%reload_ext autoreload\n",
-    "%reload_ext line_profiler"
+    "%reload_ext line_profiler\n",
+    "%autoreload 2"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "100\n",
-      "[(26, 0.0, 0.0), (1, 0.5, 0.0), (20, 0.5, 1.0), (2, 2.0, 0.0), (51, 2.0, 1.0)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%autoreload 2\n",
     "import environments.ControlledRangeVariance\n",
     "import numpy as np\n",
+    "from opebet import wealth_lb_1d, wealth_lb_2d\n",
     "\n",
     "def getenv(wsq, tv=None):\n",
     "    wsupport = [ 0, 0.5, 2, 100 ]\n",
     "    env = environments.ControlledRangeVariance.ControlledRangeVariance(seed=90210, wsupport=wsupport, expwsq=wsq, tv=tv)\n",
     "    return env, env.getpw(), env.range(), env.expectedwsq()\n",
-    "\n",
-    "env, pw, rng, ewsq = getenv(10)\n",
-    "tv, data = env.sample(100)\n",
-    "print(len(data))\n",
     "\n",
     "def compress(data):\n",
     "    # could be improved but it's used only for debugging.\n",
@@ -44,15 +32,6 @@
     "    from itertools import groupby\n",
     "    return [(len(list(g)),)+tuple(map(float,k)) for k, g in groupby(sd)]\n",
     "\n",
-    "print(compress(data))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def produce_results(env, method, alpha, ndata=100, reps=10):\n",
     "    wmin, wmax = env.range()\n",
     "    ubd = np.zeros(ndata)\n",
@@ -119,20 +98,7 @@
     "                'width': np.mean(width, axis=0),\n",
     "                'widtstd': np.std(width, axis=0, ddof=1) / np.sqrt(width.shape[0] - 1),\n",
     "             },\n",
-    "            )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def trivial(data, wmin, wmax, alpha):\n",
-    "    n = len(data)\n",
-    "    return np.zeros(n), np.ones(n)\n",
-    "\n",
-    "from opebet import wealth_lb_1d, wealth_lb_2d\n",
+    "            )\n",
     "\n",
     "def bet_1d(data, wmin, wmax, alpha):\n",
     "    lb, ub = wealth_lb_1d(data, wmin, wmax, alpha)\n",
@@ -146,34 +112,6 @@
     "    env, _, _, _ = getenv(wsq, tv)\n",
     "    z = produce_results(env, method, alpha, ndata, reps) \n",
     "    return z"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "def do_debug():\n",
-    "    import json\n",
-    "    with open('bad_case.json') as inp:\n",
-    "        js = json.loads(inp.read())\n",
-    "    truevalue, compressed_data, perm_state, wmin, wmax, alpha = js\n",
-    "    perm_state[1] = np.array(perm_state[1], dtype=np.uint32)\n",
-    "    rs = np.random.RandomState()\n",
-    "    rs.set_state(tuple(perm_state))\n",
-    "    perm = rs.permutation(1000)\n",
-    "    wr = np.empty((1000, 2), dtype=np.float64)\n",
-    "    offset = 0\n",
-    "    for c, w, r in compressed_data:\n",
-    "        slc = perm[offset:offset+c]\n",
-    "        wr[slc, 0] = w\n",
-    "        wr[slc, 1] = r\n",
-    "        offset += c\n",
-    "\n",
-    "    lb, ub = non_trivial(data=wr, wmin=wmin, wmax=wmax, alpha=alpha)"
    ]
   },
   {
@@ -294,8 +232,7 @@
     "sns.lineplot(data=data, palette=\"tab10\", linewidth=2.5, ci=None, ax=ax)\n",
     "ax.plot(np.arange(res1d[1]['cov'].size),0.95*np.ones_like(res1d[1]['cov']),'k--')\n",
     "ax.set(xscale=\"log\", xlabel=\"samples\", ylabel=\"coverage\", ylim=(0.948,1.002))\n",
-    "fig.savefig('coverage.pdf', bbox_inches='tight', pad_inches=0)\n",
-    "#ax.legend(loc='center right')"
+    "fig.savefig('coverage.pdf', bbox_inches='tight', pad_inches=0)"
    ]
   },
   {
