redacting identifying info

--- a/Mnist-Policies.ipynb
+++ b/Mnist-Policies.ipynb
@@ -42,7 +42,7 @@
      "output_type": "stream",
      "text": [
       "________________________________________________________________________________\n",
-      "[Memory] Calling __main__-C%3A-Users-nikosk.REDMOND-Desktop-projects-pycharm-mope-%3Cipython-input-921d442ec4ad%3E.get_data...\n",
+      "[Memory] Calling __main__redacted...\n",
       "get_data()\n",
       "_______________________________________________________get_data - 164.7s, 2.7min\n"
      ]
