--- a/Reward-Predictor.ipynb
+++ b/Reward-Predictor.ipynb
@@ -34,7 +34,7 @@
      "output_type": "stream",
      "text": [
       "________________________________________________________________________________\n",
-      "[Memory] Calling __main__-C%3A-Users-nikosk.REDMOND-Desktop-projects-pycharm-mope-%3Cipython-input-bab0908ef622%3E.get_more_data...\n",
+      "[Memory] Calling __main__redacted...\n",
       "get_more_data()\n",
       "__________________________________________________get_more_data - 226.3s, 3.8min\n"
      ]
